print missing activities...

--- a/projects/seed_enb2/prepare.ipynb
+++ b/projects/seed_enb2/prepare.ipynb
@@ -544,13 +544,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 116,
    "outputs": [
     {
      "data": {
       "text/plain": "[{'Scenarios': '0_',\n  'year': '2012',\n  'techs': 'battery',\n  'locs': 'PRT_1',\n  'carriers': 'electricity',\n  'unit': 'Twh',\n  'flow_out_sum': '0.000525631'},\n {'Scenarios': '0_',\n  'year': '2012',\n  'techs': 'battery',\n  'locs': 'PRT_2',\n  'carriers': 'electricity',\n  'unit': 'Twh',\n  'flow_out_sum': '0.000575126'},\n {'Scenarios': '0_',\n  'year': '2012',\n  'techs': 'biofuel_boiler',\n  'locs': 'PRT_1',\n  'carriers': 'heat',\n  'unit': 'Twh',\n  'flow_out_sum': '8.9698237'},\n {'Scenarios': '0_',\n  'year': '2012',\n  'techs': 'biofuel_boiler',\n  'locs': 'PRT_2',\n  'carriers': 'heat',\n  'unit': 'Twh',\n  'flow_out_sum': '0.000386907'},\n {'Scenarios': '0_',\n  'year': '2012',\n  'techs': 'biofuel_supply',\n  'locs': 'PRT_1',\n  'carriers': 'biofuel',\n  'unit': 'Twh',\n  'flow_out_sum': '20.39066515'}]"
      },
-     "execution_count": 111,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,14 +567,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-13T11:01:26.387711956Z",
-     "start_time": "2023-07-13T11:01:26.289228546Z"
+     "end_time": "2023-07-13T11:03:58.291903750Z",
+     "start_time": "2023-07-13T11:03:58.150551716Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 117,
    "outputs": [
     {
      "name": "stdout",
@@ -21988,7 +21988,7 @@
      "data": {
       "text/plain": "{'activities': {'biofuel_boiler_heat__PRT_1': ['Twh', '8.9698237'],\n  'biofuel_boiler_heat__PRT_2': ['Twh', '0.000386907'],\n  'biofuel_supply_biofuel__PRT_1': ['Twh', '20.39066515'],\n  'biofuel_supply_biofuel__PRT_2': ['Twh', '16.11178774'],\n  'biofuel_to_diesel_diesel__PRT_1': ['Twh', '1.075645078'],\n  'biofuel_to_diesel_diesel__PRT_2': ['Twh', '1.014019571'],\n  'biofuel_to_methane_methane__PRT_1': ['Twh', '4.349878397'],\n  'biofuel_to_methane_methane__PRT_2': ['Twh', '3.476858228'],\n  'biofuel_to_methanol_methanol__PRT_1': ['Twh', '0.761035396'],\n  'biofuel_to_methanol_methanol__PRT_2': ['Twh', '6.14514345'],\n  'ccgt_electricity__PRT_1': ['Twh', '2.01E-05'],\n  'ccgt_electricity__PRT_2': ['Twh', '1.39E-05'],\n  'chp_biofuel_extraction_electricity__PRT_1': ['Twh', '8.59E-05'],\n  'chp_biofuel_extraction_heat__PRT_1': ['Twh', '0.000144763'],\n  'chp_biofuel_extraction_electricity__PRT_2': ['Twh', '6.97E-05'],\n  'chp_biofuel_extraction_heat__PRT_2': ['Twh', '0.000126529'],\n  'chp_methane_extraction_electricity__PRT_1': ['Twh', '5.89E-05'],\n  'chp_methane_extraction_heat__PRT_1': ['Twh', '1.85E-05'],\n  'chp_methane_extraction_electricity__PRT_2': ['Twh', '4.26E-05'],\n  'chp_methane_extraction_heat__PRT_2': ['Twh', '1.36E-05'],\n  'chp_wte_back_pressure_electricity__PRT_1': ['Twh', '0.223115114'],\n  'chp_wte_back_pressure_heat__PRT_1': ['Twh', '7.08E-06'],\n  'chp_wte_back_pressure_electricity__PRT_2': ['Twh', '0.218359715'],\n  'chp_wte_back_pressure_heat__PRT_2': ['Twh', '7.59E-06'],\n  'heat_storage_small_heat__PRT_1': ['Twh', '0.090027061'],\n  'heat_storage_small_heat__PRT_2': ['Twh', '0.087053315'],\n  'hydro_reservoir_electricity__PRT_1': ['Twh', '2.157392848'],\n  'hydro_reservoir_electricity__PRT_2': ['Twh', '0.393940793'],\n  'hydro_run_of_river_electricity__PRT_1': ['Twh', '2.519490706'],\n  'hydro_run_of_river_electricity__PRT_2': ['Twh', '0.37677621'],\n  'methane_boiler_heat__PRT_1': ['Twh', '0.000218417'],\n  'methane_boiler_heat__PRT_2': ['Twh', '0.000129578'],\n  'pumped_hydro_electricity__PRT_1': ['Twh', '7.851489989'],\n  'pumped_hydro_electricity__PRT_2': ['Twh', '1.308997113']}}"
      },
-     "execution_count": 112,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21996,6 +21996,8 @@
    "source": [
     "current_scenario_index = 0\n",
     "current_scenario = {}\n",
+    "\n",
+    "missing_scenario_outputs = set()\n",
     "for row in raw_scenario_data:\n",
     "    scenario_index = int(row[\"Scenarios\"][:-1])\n",
     "    assert current_scenario_index <= scenario_index <= current_scenario_index + 1\n",
@@ -22006,6 +22008,7 @@
     "    alias = f'{row[\"techs\"]}_{row[\"carriers\"]}__{row[\"locs\"]}'\n",
     "    if alias not in enbios2_activities:\n",
     "        print(\"skipping\", alias)\n",
+    "        missing_scenario_outputs.add(alias)\n",
     "        continue\n",
     "    else:\n",
     "        print(\"adding\", alias)\n",
@@ -22016,8 +22019,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-13T11:01:27.766574495Z",
-     "start_time": "2023-07-13T11:01:27.570728691Z"
+     "end_time": "2023-07-13T11:03:59.767003822Z",
+     "start_time": "2023-07-13T11:03:59.517244731Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'battery_electricity__PRT_1',\n 'battery_electricity__PRT_2',\n 'biofuel_to_liquids_diesel__PRT_1',\n 'biofuel_to_liquids_diesel__PRT_2',\n 'biofuel_to_liquids_electricity__PRT_1',\n 'biofuel_to_liquids_electricity__PRT_2',\n 'biofuel_to_liquids_kerosene__PRT_1',\n 'biofuel_to_liquids_kerosene__PRT_2',\n 'chp_hydrogen_electricity__PRT_1',\n 'chp_hydrogen_electricity__PRT_2',\n 'chp_hydrogen_heat__PRT_1',\n 'chp_hydrogen_heat__PRT_2',\n 'dac_co2__PRT_1',\n 'dac_co2__PRT_2',\n 'electric_heater_heat__PRT_1',\n 'electric_heater_heat__PRT_2',\n 'electric_hob_cooking__PRT_1',\n 'electric_hob_cooking__PRT_2',\n 'electrolysis_hydrogen__PRT_1',\n 'electrolysis_hydrogen__PRT_2',\n 'gas_hob_cooking__PRT_1',\n 'gas_hob_cooking__PRT_2',\n 'heat_storage_big_heat__PRT_1',\n 'heat_storage_big_heat__PRT_2',\n 'heavy_transport_ev_transport__PRT_1',\n 'heavy_transport_ev_transport__PRT_2',\n 'heavy_transport_ice_transport__PRT_1',\n 'heavy_transport_ice_transport__PRT_2',\n 'hp_heat__PRT_1',\n 'hp_heat__PRT_2',\n 'hydrogen_storage_hydrogen__PRT_1',\n 'hydrogen_storage_hydrogen__PRT_2',\n 'hydrogen_to_liquids_diesel__PRT_1',\n 'hydrogen_to_liquids_diesel__PRT_2',\n 'hydrogen_to_liquids_kerosene__PRT_1',\n 'hydrogen_to_liquids_kerosene__PRT_2',\n 'hydrogen_to_methane_methane__PRT_1',\n 'hydrogen_to_methane_methane__PRT_2',\n 'hydrogen_to_methanol_methanol__PRT_1',\n 'hydrogen_to_methanol_methanol__PRT_2',\n 'light_transport_ev_transport__PRT_1',\n 'light_transport_ev_transport__PRT_2',\n 'light_transport_ice_transport__PRT_1',\n 'light_transport_ice_transport__PRT_2',\n 'methane_storage_methane__PRT_1',\n 'methane_storage_methane__PRT_2',\n 'waste_supply_waste__PRT_1',\n 'waste_supply_waste__PRT_2'}"
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_scenario_outputs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-13T11:04:09.313130620Z",
+     "start_time": "2023-07-13T11:04:09.279507772Z"
     }
    }
   },
