--- a/enbios2/demos/intro.ipynb
+++ b/enbios2/demos/intro.ipynb
@@ -74,9 +74,12 @@
    },
    "outputs": [],
    "source": [
-    "bw2data.projects.set_current(\"ecoinvent\")\n",
-    "database_name = 'cutoff_3.9.1_default'\n",
-    "db = bw2data.Database(database_name)"
+    "# select the brightway project and database (some ecoinvent database)\n",
+    "PROJECT_NAME = \"ecoinvent\"\n",
+    "DATABASE = 'cutoff_3.9.1_default'\n",
+    "\n",
+    "bw2data.projects.set_current(PROJECT_NAME)\n",
+    "db = bw2data.Database(DATABASE)"
    ]
   },
   {
