calculate different hierarchies demo

--- a/enbios2/demos/brightway_tools.ipynb
+++ b/enbios2/demos/brightway_tools.ipynb
@@ -107,7 +107,7 @@
     "    databases=[\n",
     "        BWProjectDatabase(\n",
     "            name=\"ecoinvent_391_cutoff\",\n",
-    "            source=\"/home/ram/projects/enbios2/data/ecoinvent/ecoinvent 3.9.1_cutoff_ecoSpold02/datasets\",\n",
+    "            source=\"ecoinvent/ecoinvent 3.9.1_cutoff_ecoSpold02/datasets\",\n",
     "            format=\"Ecospold2\"\n",
     "        )\n",
     "    ]\n",
@@ -131,73 +131,6 @@
     "collapsed": false
    },
    "id": "f49bd0a71458be5c"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "from enbios2.base.experiment import Experiment\n",
-    "\n",
-    "TEST_BW_PROJECT = \"ecoinvent_391\"\n",
-    "TEST_BW_DATABASE = \"ecoinvent_391_cutoff\"\n",
-    "\n",
-    "experiment = {\n",
-    "    \"bw_project\": TEST_BW_PROJECT,\n",
-    "    \"bw_default_database\": TEST_BW_DATABASE,\n",
-    "    \"activities\": {\n",
-    "        \"single_activity\": {\n",
-    "            \"id\": {\n",
-    "                \"name\": \"heat and power co-generation, wood chips, 6667 kW, state-of-the-art 2014\",\n",
-    "                \"unit\": \"kilowatt hour\",\n",
-    "                \"location\": \"DK\"\n",
-    "            },\n",
-    "            \"output\": [\n",
-    "                \"kWh\",\n",
-    "                1\n",
-    "            ]\n",
-    "        },\n",
-    "        \"2nd\": {\n",
-    "            \"id\": {\n",
-    "                \"name\": \"concentrated solar power plant construction, solar tower power plant, 20 MW\",\n",
-    "                \"code\": \"19978cf531d88e55aed33574e1087d78\",\n",
-    "            },\n",
-    "            \"output\": [\n",
-    "                \"unit\",\n",
-    "                1\n",
-    "            ]\n",
-    "        }\n",
-    "    },\n",
-    "    \"methods\": [\n",
-    "        {\n",
-    "            \"id\": ['EDIP 2003 no LT', 'non-renewable resources no LT', 'zinc no LT']\n",
-    "        }\n",
-    "    ],\n",
-    "    \"hierarchy\": {\n",
-    "        \"energy\": [\n",
-    "            \"single_activity\",\n",
-    "            \"2nd\"\n",
-    "        ]\n",
-    "    },\n",
-    "    \"scenarios\": [\n",
-    "        {\n",
-    "            \"activities\": {\"single_activity\": [\"kWh\", 3]}\n",
-    "        },\n",
-    "        {\n",
-    "            \"activities\": {\"single_activity\": [\"kWh\", 4]}\n",
-    "        },\n",
-    "        {\n",
-    "            \"activities\": {\"single_activity\": [\"kWh\", 5]}\n",
-    "        }\n",
-    "    ]\n",
-    "}\n",
-    "\n",
-    "exp = Experiment(experiment)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "4e762273be725fe8"
   },
   {
    "cell_type": "code",
